[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes_ui/MenuCursor.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes_ui/UIButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/intro_credits.gd" type="Script" id=3]
[ext_resource path="res://resources/TinyUnicode.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/assets_audio/Marty_Gots_a_Plan-Kevin_MacLeod.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/assets_fonts_files/RPGSystem.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[node name="IntroCredits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.278431, 0.278431, 0.278431, 1 )

[node name="FrontSide" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="FrontSide"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -14.0
margin_right = 64.0
margin_bottom = 50.0
expand = true

[node name="Title" type="Label" parent="FrontSide"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -90.0
margin_right = 100.0
margin_bottom = -75.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 1 )
text = "Regrets"
align = 1

[node name="Intro" type="Label" parent="FrontSide"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -85.0
margin_top = 49.0
margin_right = 85.0
margin_bottom = 88.0
rect_min_size = Vector2( 170, 30 )
custom_colors/font_color = Color( 0.552941, 0.552941, 0.552941, 1 )
custom_constants/line_spacing = 0
custom_fonts/font = ExtResource( 4 )
text = "Arcweave presents...

a point and click adventure"
align = 1

[node name="FlipSide" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CreditsContainer" type="HBoxContainer" parent="FlipSide"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.0
margin_top = 10.0
margin_right = 144.0
margin_bottom = 68.0

[node name="Credits" type="Label" parent="FlipSide/CreditsContainer"]
margin_top = 2.0
margin_right = 62.0
margin_bottom = 55.0
rect_min_size = Vector2( 62, 50 )
custom_constants/line_spacing = -3
custom_fonts/font = ExtResource( 4 )
text = "Writer-Dev:
Sprites Art:
Backgrounds:
Music:
"

[node name="Credits2" type="Label" parent="FlipSide/CreditsContainer"]
margin_left = 66.0
margin_top = 2.0
margin_right = 277.0
margin_bottom = 55.0
rect_min_size = Vector2( 106, 50 )
custom_constants/line_spacing = -3
custom_fonts/font = ExtResource( 4 )
text = "GIANNIS GEORGIOU
STAMATIS VASILEIOU
MUCHO PIXELS - https://www.muchopixels.com
KEVIN MACLEOD - http://incompetech.com
GERTRAUT HECHER - https://www.gertrauthecher.at"

[node name="MusicAttribution" type="Label" parent="FlipSide"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -74.0
margin_right = 144.0
rect_min_size = Vector2( 80, 50 )
custom_constants/line_spacing = -3
custom_fonts/font = ExtResource( 4 )
text = "\"Kool Kats\" and \"Marty Gots a Plan\" by Kevin MacLeod and 
\"Harmony of Peace - Angel Voices\" by Gertraut Hecher
are licensed under a Creative Commons Attribution 4.0 license."
autowrap = true

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -146.0
margin_top = -25.0
margin_right = 146.0
margin_bottom = -10.0
rect_min_size = Vector2( 70, 15 )

[node name="NewGame" parent="Buttons" instance=ExtResource( 2 )]
margin_bottom = 15.0

[node name="Load" parent="Buttons" instance=ExtResource( 2 )]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 15.0
text = "Load"

[node name="Quit" parent="Buttons" instance=ExtResource( 2 )]
margin_left = 148.0
margin_right = 218.0
margin_bottom = 15.0
text = "Quit"

[node name="Credits" parent="Buttons" instance=ExtResource( 2 )]
margin_left = 222.0
margin_right = 292.0
margin_bottom = 15.0
text = "Credits"

[node name="Main" parent="Buttons" instance=ExtResource( 2 )]
visible = false
margin_top = 51.0
margin_bottom = 64.0
text = "Main"

[node name="MenuCursor" parent="." instance=ExtResource( 1 )]

[node name="ButtonTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Buttons/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Buttons/Main" to="." method="_on_Credits_pressed"]
[connection signal="timeout" from="ButtonTimer" to="." method="_on_ButtonTimer_timeout"]
